# opencv4_cpp_learn_history

./: README.md
01-图像读取与显示_02-图像色彩空间转换/: main.cpp
03-图像对象的创建与赋值/: main.cpp
04-图像像素的读写操作/: main.cpp
05-图像像素的算术操作/: main.cpp
06-滚动条操作演示-调整图像亮度_07-滚动条操作演示-参数传递度/: main.cpp
08-键盘响应操作/: main.cpp
09-OpenCV自带颜色表操作/: CMakeLists.txt  main.cpp
10-图像像素的逻辑操作/: main.cpp
11-通道分离与合并/: main.cpp
12-图像色彩空间转换/: main.cpp
13-图像像素值统计/: main.cpp
14-图像几何形状绘制/: main.cpp
15-随机数与随机颜色/: main.cpp
16-多边形填充与绘制/: main.cpp
17-鼠标操作与响应/: main.cpp
18-图像像素类型转换与归一化/: main.cpp
19-图像放缩与插值/: main.cpp
20-图像翻转/: main.cpp
21-图像旋转/: main.cpp
22-视频文件摄像头使用_23-视频处理与保存/: main.cpp
24-图像直方图/: main.cpp
25-二维直方图/: main.cpp
26-直方图均衡化/: main.cpp
27-图像卷积操作/: main.cpp
28-高斯模糊/: main.cpp
29-高斯双边模糊/: main.cpp
30-实时人脸检测/: main.cpp
